# IRKeyboardEmulator

./: CMakeLists.txt  README.adoc  build.sh  handle_input.cpp  handle_input.h  main.cpp  p6_keycodes.cpp  p6_keycodes.h  send_ir.cpp  send_ir.h  setup.sh
circuit/: IR_emitter.fzz
src/: CMakeLists.txt  handle_input.cpp  main.cpp
